# proguide-test

./: .gitignore  PLAN-consolidacion-exploracion.md  PLAN-dehardcode-normalizer.md  PLAN-fase3.md  PLAN-fase6.md  PLAN-fixes-feedback.md  PLAN-mapping-poc.md  PLAN-regresion.md  PLAN_IMPLEMENTACION_CLI_MCP_PROGUIDE_TEST.md  PROGUIDE_FEEDBACK.md  README.md  REFACTOR.md  pyproject.toml
.github/workflows/: release-cli.yml  ui-ci.yml
examples/: prd.yaml
proguide/: __init__.py  case_runs.py  cli.py  detector.py  env.py  evidence.py  feedback.py  generator.py  markdown_cases.py  models.py  paths.py  planner.py  playwright_steps.py  prd.py  project_context.py  pytest_plugin.py  reporter.py  runner.py  server.py  ui_bridge.py  utils.py
proguide/agents/: __init__.py  markdown_agent.py  planner_agent.py
proguide/templates/: __init__.py  evidence.html.j2  report.html.j2
proguide_tests/: config.yaml
proguide_tests/prd/: prd.yaml
skills/: SKILL.md  TEMPLATE.md
tests/: test_case_runs.py  test_cli.py  test_detector.py  test_env.py  test_markdown_cases.py  test_planner_agent.py  test_planner_generator.py  test_playwright_steps.py  test_project_context.py  test_pytest_plugin.py  test_reporter.py
ui/: .prettierignore  .prettierrc.json  cli.js  cli.ts  eslint.config.js  eslint.config.ts  jsconfig.json  mcp-server.js  mcp-server.ts  package-lock.json  package.json  playwright-runtime.js  playwright-runtime.ts  proguide-service.js  proguide-service.ts  python-runtime.js  server.js  server.ts  tsconfig.build.json  tsconfig.json  viewer.js  viewer.ts
ui/assets/: scripts.ts  (+2 more)
(+90 files in other folders)
