[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proguide-test-e2e"
version = "0.1.6"
description = "Local frontend QA test generator and evidence collector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1,<4.0",
  "PyYAML>=6.0,<7.0",
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
runner = [
  "playwright>=1.44,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-xdist>=3.6,<4.0",
]
llm = [
  "langchain>=0.3,<0.4",
  "langchain-anthropic>=0.2,<0.4",
  "langchain-openai>=0.2,<0.4",
]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
proguide = "proguide.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["proguide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
